fix header spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,7 +17,6 @@ p {
 }
 
 h1,h2,h3,h4,h5,h6 {
-    margin-top: 1.25rem;
     margin-bottom: 2rem;
 }
 
